@@ -519,12 +519,9 @@ functionality that can be directly applied to twill.</li>
 <blockquote>
 <ol class="arabic simple">
 <li>test the documented fieldname spec for fv/submit.</li>
-<li>'go' on non-absolute URLs breaks when executed twice in a row.</li>
-<li>UPGRADE wwwsearch.</li>
+<li>UPGRADE wwwsearch stuff.</li>
 <li>HTTP-EQUIV refresh/redirect commands w/in mechanize? (issola.caltech.edu/~t/transfer/redir-test.html)</li>
-<li>Test HTTP basic auth.</li>
-<li>basic auth (<a class="reference" href="http://www.quixote.ca/qx/HttpBasicAuthentication">http://www.quixote.ca/qx/HttpBasicAuthentication</a>?) example.</li>
-<li>bug: back &amp; forms</li>
+<li>Test HTTP basic auth &amp; basic auth (<a class="reference" href="http://www.quixote.ca/qx/HttpBasicAuthentication">http://www.quixote.ca/qx/HttpBasicAuthentication</a>?) example.</li>
 </ol>
 </blockquote>
 <p>after that:</p>
@@ -537,6 +534,7 @@ functionality that can be directly applied to twill.</li>
 <li>expose 'browser' &amp; document re Grig; regexp esp.</li>
 <li>twill-fork: make file writing stuff optional; test massive fork fn.</li>
 <li>eggggz</li>
+<li>think about 'go' &amp; test-go</li>
 </ol>
 </blockquote>
 <p>Longer term fixes &amp; cleanups:</p>
